# PythonicDevTool

./: README.md  pyproject.toml
.github/workflows/: ci.yml
messy_folder/docx/: Releve_Notes_Youssef_V4.docx
src/devtool/cli/: main.py
src/devtool/commands/: backup.py  clean.py  hash.py  organize.py  search.py  stats.py
src/devtool/config/: settings.py
src/devtool/services/: backup.py  clean.py  hashing.py  organize.py  search.py  statistics.py
src/devtool/utils/: file_utils.py  logger.py
tests/: test_hashing.py
