[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devtool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
devtool = "devtool.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff]
# Same as Black.
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E and F are standard errors/warnings. 
# I is for isort (sorts imports automatically).
# UP is pyupgrade (modernizes python syntax).
select = ["E", "F", "I", "UP"] 
ignore = ["E501"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
